[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/sxgd/assets/fonts/Jost-400-Book.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://screens/LevelEditor/DetailPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/LevelEditor/GridPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/LevelEditor/EditorContainer.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="EditorContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="DetailPanelContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 40

[node name="DetailPanel" parent="Panel/DetailPanelContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 832.0
margin_bottom = 480.0

[node name="GridPanel" parent="Panel" instance=ExtResource( 3 )]

[node name="TopContainer" type="MarginContainer" parent="Panel"]
margin_right = 832.0
margin_bottom = 49.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Background" type="ColorRect" parent="Panel/TopContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 824.0
margin_bottom = 41.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 0.501961 )

[node name="TopBar" type="HBoxContainer" parent="Panel/TopContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 824.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 32 )

[node name="Left" type="HBoxContainer" parent="Panel/TopContainer/TopBar"]
margin_right = 607.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Background" type="Button" parent="Panel/TopContainer/TopBar/Left"]
margin_right = 128.0
margin_bottom = 33.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = SubResource( 1 )
text = "Background"
flat = true

[node name="Middleground" type="Button" parent="Panel/TopContainer/TopBar/Left"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 33.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = SubResource( 1 )
text = "Middleground"
flat = true

[node name="Foreground" type="Button" parent="Panel/TopContainer/TopBar/Left"]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 33.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = SubResource( 1 )
text = "Foreground"
flat = true

[node name="Details" type="Button" parent="Panel/TopContainer/TopBar/Left"]
margin_left = 396.0
margin_right = 524.0
margin_bottom = 33.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
pressed = true
text = "Details"
flat = true

[node name="Right" type="HBoxContainer" parent="Panel/TopContainer/TopBar"]
margin_left = 611.0
margin_right = 816.0
margin_bottom = 33.0
alignment = 2

[node name="Play" type="Button" parent="Panel/TopContainer/TopBar/Right"]
margin_right = 48.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true

[node name="Save" type="Button" parent="Panel/TopContainer/TopBar/Right"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Save"
flat = true

[node name="Load" type="Button" parent="Panel/TopContainer/TopBar/Right"]
margin_left = 104.0
margin_right = 153.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Load"
flat = true

[node name="Exit" type="Button" parent="Panel/TopContainer/TopBar/Right"]
margin_left = 157.0
margin_right = 205.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Exit"
flat = true

[node name="SaveDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
resizable = true
access = 1
filters = PoolStringArray( "*.json; Level" )
current_dir = "user://levels"
current_path = "user://levels/"

[node name="LoadDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 1
filters = PoolStringArray( "*.json; Level" )
current_dir = "user://levels"
current_path = "user://levels/"

[node name="ExitDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
popup_exclusive = true
dialog_text = "Are you sure you want to exit the editor?"

[node name="LevelPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelContainer" type="Control" parent="LevelPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOverlay" type="CanvasLayer" parent="LevelPanel"]
layer = 2

[node name="ParentOverlay" type="Control" parent="LevelPanel/GameOverlay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopContainer" type="MarginContainer" parent="LevelPanel/GameOverlay/ParentOverlay"]
margin_right = 832.0
margin_bottom = 49.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Background" type="ColorRect" parent="LevelPanel/GameOverlay/ParentOverlay/TopContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 824.0
margin_bottom = 41.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 0.498039 )

[node name="TopBar" type="HBoxContainer" parent="LevelPanel/GameOverlay/ParentOverlay/TopContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 824.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 32 )
alignment = 2

[node name="Right" type="HBoxContainer" parent="LevelPanel/GameOverlay/ParentOverlay/TopContainer/TopBar"]
margin_left = 768.0
margin_right = 816.0
margin_bottom = 33.0
alignment = 2

[node name="Stop" type="Button" parent="LevelPanel/GameOverlay/ParentOverlay/TopContainer/TopBar/Right"]
margin_right = 48.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Stop"
flat = true

[node name="HUD" type="MarginContainer" parent="LevelPanel/GameOverlay/ParentOverlay"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -195.0
margin_top = -119.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 60

[node name="Instructions" type="Label" parent="LevelPanel/GameOverlay/ParentOverlay/HUD"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 20.0
margin_top = 20.0
margin_right = 175.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "RETURN  - Replay level
ESC - Stop"
